<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/warehouse"
    tools:context=".RegisterFragment">

    <!-- Background -->
    <RelativeLayout
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:alpha="0.7"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="28dp"
        android:gravity="center"
        tools:ignore="UseCompoundDrawables">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="28dp"
            android:layout_marginTop="36dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="28dp">

                <!-- Welcome -->
                <TextView
                    android:id="@+id/welcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/registration"
                    android:textStyle="bold"
                    android:textSize="@dimen/page_name"/>
                <TextView
                    android:id="@+id/welcome_instructions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_instruction"
                    android:layout_marginBottom="30dp"/>

                <!-- Email -->
                <TextView
                    android:id="@+id/register_email_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:alpha="0.8"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/register_email_input"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:autofillHints="{@value #AUTOFILL_HINT_EMAIL_ADDRESS}"
                    android:hint="@string/enter_username"
                    android:inputType="textEmailAddress"
                    android:layout_marginBottom="16dp"/>

                <!-- Password -->
                <TextView
                    android:id="@+id/register_password_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:alpha="0.8"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/register_password_input"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:autofillHints="{@value #AUTOFILL_HINT_PASSWORD}"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:layout_marginBottom="16dp"/>

                <!-- Confirm Password -->
                <TextView
                    android:id="@+id/register_confirm_password_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:alpha="0.8"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/register_confirm_password_input"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:autofillHints="{@value #AUTOFILL_HINT_PASSWORD}"
                    android:hint="@string/reenter_password"
                    android:inputType="textPassword"
                    android:layout_marginBottom="10dp"/>

                <!-- Register Button -->
                <Button
                    android:id="@+id/register_button"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/register"
                    app:cornerRadius="32dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</RelativeLayout>