<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/warehouse"
    tools:context=".LoginFragment">

    <!-- Background -->
    <RelativeLayout
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.7"
        android:background="@color/colorPrimary"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="28dp"
        android:gravity="center"
        tools:ignore="UseCompoundDrawables">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="28dp"
            android:layout_marginTop="36dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="28dp">

                <!-- Welcome -->
                <TextView
                    android:id="@+id/welcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/login"
                    android:textStyle="bold"
                    android:textSize="@dimen/page_name"/>
                <TextView
                    android:id="@+id/welcome_instructions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_instruction"
                    android:alpha="0.8"
                    android:layout_marginBottom="30dp"/>

                <!-- Username -->
                <TextView
                    android:id="@+id/username_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:alpha="0.8"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/username_input"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:autofillHints=""
                    android:hint="@string/enter_username"
                    android:inputType="text"
                    android:focusableInTouchMode="true"
                    android:focusable="true"
                    android:layout_marginBottom="16dp"/>

                <!-- Password -->
                <TextView
                    android:id="@+id/password_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:alpha="0.8"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/password_input"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:autofillHints=""
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:layout_marginBottom="10dp"/>

                <!-- Create Account -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/register_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/register_text"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"/>
                    <TextView
                        android:id="@+id/create_account_link"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/create_account"
                        android:textColor="@color/my_secondary"
                        android:focusable="true"
                        android:textAlignment="center"
                        android:layout_marginStart="24dp"
                        android:layout_toEndOf="@+id/register_text"/>
                </RelativeLayout>
                <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>
                <Button
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/login"
                    app:cornerRadius="32dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</RelativeLayout>