<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_inventory_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/warehouse"
    tools:context=".InventoryItemFragment">

    <!-- Background -->
    <RelativeLayout
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.7"
        android:background="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="28dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            app:cardCornerRadius="28dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="28dp">

                <!-- Page title -->
                <TextView
                    android:id="@+id/page_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/item_page_title"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/page_name"
                    android:textStyle="bold" />

                <!-- Item -->
                <TextView
                    android:id="@+id/item_name_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.8"
                    android:text="@string/item_name_label"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/item_name_input"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="16dp"
                    android:autofillHints="{@value #AUTOFILL_HINT_EMAIL_ADDRESS}"
                    android:hint="@string/item_name_input_label"
                    android:inputType="textEmailAddress" />

                <!-- Quantity -->
                <TextView
                    android:id="@+id/item_quantity_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.8"
                    android:text="@string/item_qty_label"
                    android:textStyle="bold" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/item_quantity_input"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:autofillHints="{@value #AUTOFILL_HINT_NOT_APPLICABLE}"
                        android:hint="@string/item_qty_input_label"
                        android:inputType="number"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/item_remove_icon"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/item_remove_icon"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginEnd="8dp"
                        android:clickable="true"
                        android:contentDescription="@string/remove_item_button_description"
                        android:src="@drawable/icon_remove"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/item_add_icon"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/item_add_icon"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:clickable="true"
                        android:contentDescription="@string/add_item_button_description"
                        android:src="@drawable/icon_add"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="20dp" />

                <!-- Actions-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/item_delete_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:text="@string/item_remove_label"
                        android:textColor="@color/red"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/item_save_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="@string/item_save_label"
                        app:cornerRadius="28dp"
                        tools:ignore="RelativeOverlap" />
                </RelativeLayout>


            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</RelativeLayout>