<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_inventory"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/warehouse"
    tools:context=".InventoryFragment">
    <!-- Background Tint-->
    <RelativeLayout
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.7"
        android:background="@color/colorPrimary" />
    <!-- Main Container -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <!-- Header Container-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/inventory_header_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/header_item_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:text="@string/list_item_item_name"
                android:textColor="@color/white"
                android:textSize="@dimen/register_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/header_qty_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/header_quantity_label"
                android:textColor="@color/white"
                android:textSize="@dimen/register_text_size"
                app:layout_constraintEnd_toStartOf="@+id/header_remove_label"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/header_remove_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:text="@string/header_remove_label"
                android:textColor="@color/white"
                android:textSize="@dimen/register_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Items -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:numColumns="1"
            android:paddingLeft="28dp"
            android:paddingRight="28dp"
            tools:listitem="@layout/list_item" />
    </LinearLayout>

    <!-- Floating Button -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/inventory_add_item_button"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:clickable="true"
        android:contentDescription="@string/add_button"
        app:srcCompat="@drawable/add_button"
        app:maxImageSize="60dp"
        />
</androidx.coordinatorlayout.widget.CoordinatorLayout>